ansible/roles/traefik-ingress/files/nginx/echo-ingress.yml
# https://www.digitalocean.com/community/tutorials/how-to-set-up-an-nginx-ingress-with-cert-manager-on-digitalocean-kubernetes#prerequisites
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - '*.example.com'
    secretName: echo-tls
  rules:
    - host: traefik.ilude.com
      http:
        paths:
          - path: /echo1
            backend:
              serviceName: echo1
              servicePort: 80
          - path: /echo2
            backend:
              serviceName: echo2
              servicePort: 80
